Improved testing for role and permission CRUD operations