@@ -2,6 +2,7 @@ package com.team5.career_progression_app.testing.core;
 
 import com.team5.career_progression_app.model.Permission;
 import com.team5.career_progression_app.model.Role;
+import com.team5.career_progression_app.model.RolePermission;
 import com.team5.career_progression_app.repository.PermissionRepository;
 import com.team5.career_progression_app.repository.RolePermissionRepository;
 import com.team5.career_progression_app.repository.RoleRepository;
@@ -11,9 +12,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataIntegrityViolationException;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -31,11 +30,27 @@ public class RoleServiceImplTest {
     private RolePermissionRepository rolePermissionRepository;
 
     @Test
-    void givenANewRole_whenCreatingANewRole_thenShouldCreteRole() {
+    void givenNewRoleAndPermissions_whenCreatingRole_thenRoleShouldBeCreatedWithGivenPermissions() {
 
-        String roleName = "MODERATOR";
+        String permissionName1 = "TEST_PERMISSION_1";
+        String permissionName2 = "TEST_PERMISSION_2";
 
-        Role createdRole = roleService.insertRole(roleName, Collections.emptyList());
+        Permission newPermission1 = new Permission();
+        newPermission1.setName(permissionName1);
+        permissionRepository.save(newPermission1);
+
+        Permission newPermission2 = new Permission();
+        newPermission2.setName(permissionName2);
+        permissionRepository.save(newPermission2);
+
+        List<Permission> savedPermissions = permissionRepository.findByNameIn(List.of(permissionName1, permissionName2));
+        assertThat(savedPermissions)
+                .hasSize(2)
+                .extracting(Permission::getName)
+                .containsExactlyInAnyOrderElementsOf(List.of(permissionName1, permissionName2));
+
+        String roleName = "TEST_ROLE";
+        Role createdRole = roleService.insertRole(roleName, List.of(permissionName1, permissionName2));
 
         assertThat(createdRole).isNotNull();
         assertThat(createdRole.getId()).isNotNull();
@@ -44,28 +59,82 @@ public class RoleServiceImplTest {
         Optional<Role> fromDb = roleRepository.findById(createdRole.getId());
         assertThat(fromDb).isPresent();
         assertThat(fromDb.get().getName()).isEqualTo(roleName);
+
+        Role fetched = fromDb.get();
+
+        Set<Permission> assignedPermissions = fetched.getPermissions();
+        assertThat(assignedPermissions).hasSize(2);
+        assertThat(assignedPermissions)
+                .extracting(Permission::getName)
+                .containsExactlyInAnyOrder(permissionName1, permissionName2);
+
+        assertThat(rolePermissionRepository.existsByRoleAndPermission(createdRole, newPermission1)).isTrue();
+        assertThat(rolePermissionRepository.existsByRoleAndPermission(createdRole, newPermission2)).isTrue();
     }
 
     @Test
-    void givenExistingRole_whenUpdatingName_thenNameShouldBeUpdated() {
+    void givenExistingRoleWithPermissions_whenUpdatingNameAndPermissions_thenBothShouldBeUpdated() {
 
-        Role role = roleService.insertRole("TEMP", Collections.emptyList());
+        String initialRoleName = "INITIAL_ROLE";
+        String updatedRoleName = "UPDATED_ROLE";
 
-        role.setName("UPDATED_ROLE");
-        Role updated = roleRepository.save(role);
+        String initialPermissionName = "INITIAL_PERMISSION";
+        String updatedPermissionName = "UPDATED_PERMISSION";
 
-        assertThat(updated.getName()).isEqualTo("UPDATED_ROLE");
+        Permission initialPermission = new Permission();
+        initialPermission.setName(initialPermissionName);
+        permissionRepository.save(initialPermission);
+
+        Role createdRole = roleService.insertRole(initialRoleName, List.of(initialPermissionName));
+
+        createdRole.setName(updatedRoleName);
+        roleRepository.save(createdRole);
+
+        List<RolePermission> allPermissions = rolePermissionRepository.findAll();
+        for (RolePermission rp : allPermissions) {
+            if (rp.getRole().getId().equals(createdRole.getId())) {
+                rolePermissionRepository.delete(rp);
+            }
+        }
+
+        Permission updatedPermission = new Permission();
+        updatedPermission.setName(updatedPermissionName);
+        permissionRepository.save(updatedPermission);
+
+        rolePermissionRepository.save(new RolePermission(null, createdRole, updatedPermission));
+
+        Role updatedRole = roleRepository.findRoleByName(updatedRoleName).orElseThrow();
+
+        assertThat(updatedRole.getPermissions())
+                .extracting(Permission::getName)
+                .containsExactly(updatedPermissionName);
+
+        assertThat(rolePermissionRepository.existsByRoleAndPermission(updatedRole, initialPermission)).isFalse();
+        assertThat(rolePermissionRepository.existsByRoleAndPermission(updatedRole, updatedPermission)).isTrue();
     }
 
     @Test
-    void givenExistingRole_whenDeleting_thenRoleShouldBeRemoved() {
+    void givenRoleWithPermissions_whenDeleted_thenRoleAndRolePermissionsShouldBeRemoved() {
+        String roleName = "TO_DELETE";
+        String permissionName = "DELETE_TEST_PERMISSION";
 
-        Role role = roleService.insertRole("TO_DELETE", Collections.emptyList());
-        Integer id = role.getId();
+        Permission permission = new Permission();
+        permission.setName(permissionName);
+        permission = permissionRepository.save(permission);
 
-        roleRepository.delete(role);
+        Role createdRole = roleService.insertRole(roleName, List.of(permissionName));
 
-        assertThat(roleRepository.findById(id)).isNotPresent();
+        List<RolePermission> allPermissions = rolePermissionRepository.findAll();
+        for (RolePermission rp : allPermissions) {
+            if (rp.getRole().getId().equals(createdRole.getId())) {
+                rolePermissionRepository.delete(rp);
+            }
+        }
+
+        roleRepository.delete(createdRole);
+
+        assertThat(roleRepository.findById(createdRole.getId())).isNotPresent();
+        assertThat(rolePermissionRepository.existsByRoleAndPermission(createdRole, permission)).isFalse();
     }
 
     @Test
